<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Otter</string>
    <string name="login_welcome">Please enter details for a Funkwhale instance to access its content</string>
    <string name="login_hostname">Hostname</string>
    <string name="login_cleartext">Allow cleartext traffic (HTTP)</string>
    <string name="login_anonymous">Anonymous authentication</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Log in</string>
    <string name="login_logging_in">Logging in…</string>
    <string name="login_error_hostname">Enter a valid URL first</string>
    <string name="login_error_hostname_https">The Funkwhale hostname should be secure through HTTPS</string>
    <string name="login_error_userinfo">Could not fetch user info</string>
    <string name="toolbar_search">Search</string>
    <string name="title_downloads">Downloads</string>
    <string name="title_settings">Settings</string>
    <string name="title_oss_licences">Libre licences</string>
    <string name="search_placeholder">Search artists, albums and tracks</string>
    <string name="search_welcome">Enter your search above and hit enter to search in your collection</string>
    <string name="search_no_results">No results</string>
    <string name="settings_general">General</string>
    <string name="settings_media_quality">Media quality</string>
    <string name="settings_media_quality_quality">Best quality</string>
    <string name="settings_media_quality_size">Smallest size</string>
    <string name="settings_media_quality_summary_quality">Best available version will be played</string>
    <string name="settings_media_quality_summary_size">Smallest available track will be played</string>
    <string name="settings_media_cache_size">Cache size for media</string>
    <string name="settings_media_cache_size_summary">%d GB will be used to store tracks for offline playback</string>
    <string name="settings_play_order">Preferred playback order</string>
    <string name="settings_play_order_shuffle">Shuffle albums</string>
    <string name="settings_play_order_shuffle_summary">You prefer shuffling album tracks</string>
    <string name="settings_play_order_in_order">Play albums in order</string>
    <string name="settings_play_order_in_order_summary">You prefer playing albums in order</string>
    <string name="settings_other">Other</string>
    <string name="settings_night_mode">Dark mode</string>
    <string name="settings_night_mode_on">Always on (dark mode)</string>
    <string name="settings_night_mode_on_summary">Dark mode will always be on</string>
    <string name="settings_night_mode_off">Always off (light mode)</string>
    <string name="settings_night_mode_off_summary">Light mode will always be on</string>
    <string name="settings_night_mode_system">Follow system</string>
    <string name="settings_night_mode_system_summary">Night mode will follow the system</string>
    <string name="settings_experiments">Experimental features</string>
    <string name="settings_experiments_description">Use at your own risks. It may freeze or crash the app.</string>
    <string name="settings_experiments_restart_title">App restart required</string>
    <string name="settings_experiments_restart_content">Close and restart the app to use the new settings</string>
    <string name="settings_information">Info</string>
    <string name="settings_information_repository_title">Repository</string>
    <string name="settings_information_repository_description">Otter by Antoine POPINEAU (apognu)</string>
    <string name="settings_version_title">Version</string>
    <string name="settings_information_license_title">License</string>
    <string name="settings_information_license_description">MIT license</string>
    <string name="settings_crash_report_title">Copy crash logs</string>
    <string name="settings_crash_report_description">Only Otter logs from 5 minutes before crash will be collected</string>
    <string name="settings_crash_report_copied">Last crash report copied to your clipboard</string>
    <string name="settings_logout">Sign out</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="tracks">Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="radios">Radios</string>
    <string name="favorites">Favorites</string>
    <string name="playback_media_controls">Media controls</string>
    <string name="playback_media_controls_description">Control media playback</string>
    <string name="playback_play">Play</string>
    <string name="playback_shuffle">Shuffle</string>
    <string name="playback_queue">Queue</string>
    <string name="playback_queue_empty">Your queue is empty</string>
    <string name="playback_queue_remove_item">Remove</string>
    <string name="playback_queue_add_item">Add to queue</string>
    <string name="playback_queue_play_next">Play next</string>
    <string name="playback_queue_download">Download</string>
    <string name="playback_queue_clear">Clear</string>
    <string name="playback_queue_save">Save</string>
    <string name="manage_add_to_favorites">Add to favorites</string>
    <string name="control_toggle">Toggle playback</string>
    <string name="control_previous">Previous track</string>
    <string name="control_next">Next track</string>
    <string name="error_playback">Could not play this track</string>
    <plurals name="album_count">
        <item quantity="one">%d album</item>
        <item quantity="other">%d albums</item>
    </plurals>
    <string name="alt_app_logo">App logo</string>
    <string name="alt_artist_art">Artist art</string>
    <string name="alt_album_cover">Album cover</string>
    <string name="alt_more_options">More options</string>
    <string name="alt_track_info">Track info</string>
    <string name="track_info_artist">Go to artist</string>
    <string name="track_info_album">Go to album</string>
    <string name="track_info_details">Info</string>
    <string name="track_info_details_title">Track details</string>
    <string name="track_info_details_artist">Artist</string>
    <string name="track_info_details_album">Album</string>
    <string name="track_info_details_track_title">Track title</string>
    <string name="track_info_details_track_copyright">Copyright</string>
    <string name="track_info_details_track_license">License</string>
    <string name="track_info_details_track_duration">Duration</string>
    <string name="track_info_details_track_position">Album position</string>
    <string name="track_info_details_track_bitrate">Bitrate</string>
    <string name="track_info_details_track_instance">Funkwhale instance</string>
    <string name="radio_playback_error">Could not play this radio station</string>
    <string name="radio_instance_radios">Instance radios</string>
    <string name="radio_user_radios">User radios</string>
    <string name="radio_your_content_title">Your content</string>
    <string name="radio_your_content_description">Picks from your own libraries</string>
    <string name="radio_favorites_description">Play your favorites in a never-ending happiness loop.</string>
    <string name="radio_random_title">Random</string>
    <string name="radio_random_description">Totally random picks. Maybe you\'ll discover new things\?</string>
    <string name="radio_less_listened_title">Less played</string>
    <string name="radio_less_listened_description">Listen to tracks you usually don\'t.</string>
    <string name="logout_title">Sign out</string>
    <string name="logout_content">Sign out of this Funkwhale instance\?</string>
    <plurals name="playlist_description">
        <item quantity="one">%1$d track • %2$s"</item>
        <item quantity="other">%1$d tracks • %2$s"</item>
    </plurals>
    <string name="playlist_add_to">Add to playlist</string>
    <string name="playlist_add_to_new">New playlist…</string>
    <string name="playlist_add_to_create">Create playlist</string>
    <string name="playlist_added_to">Added to “%s” playlist</string>
    <string name="filters">Filters</string>
    <string name="fiters_all">All music</string>
    <string name="filters_my_music">My music</string>
    <string name="filters_followed">Followed content</string>
    <plurals name="downloads_description">
        <item quantity="one">Downloading %1$d track…</item>
        <item quantity="other">Downloading %1$d tracks…</item>
    </plurals>
</resources>